work on user authentication

--- a/.env
+++ b/.env
@@ -18,7 +18,8 @@ JWT_REFRESH_EXPIRES_IN=365d
 #SMTP Node Mailer
 EMAIL_FROM="mdabdurrazzakrakib290@gmail.com"
 EMAIL_USER="mdabdurrazzakrakib290@gmail.com"
-EMAIL_PASS="mzcr seca bwuw vbpg"
+# EMAIL_PASS="mzcr seca bwuw vbpg"
+EMAIL_PASS=yhfe eise pkkl butl
 EMAIL_PORT=587
 EMAIL_HOST=smtp.gmail.com
 
