add: instrucations model also refactor some code

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 NODE_ENV=development
 IP=10.0.70.188
 # PORT=6001
-PORT=6005
-DATABASE_URL=mongodb://localhost:27017/PocketChef  # after slash put your database name
+PORT=6004
+DATABASE_URL=mongodb://localhost:27017/PocketChef 
 
 # Bcrypt
 BCRYPT_SALT_ROUNDS=12
