--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "create-module": "ts-node ./src/gm.ts"
   },
-  "author": "Nadir Hossain",
+  "author": "Md Abdur Razzak",
   "license": "ISC",
   "description": "",
   "devDependencies": {
